# python-fire

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  Adult Salary Predication  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  example.py  index.html  mkdocs.yml  pylintrc  pyproject.toml  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml
.codeboarding/: Argument_Input_Processing.md  CLI_Output_User_Experience.md  Core_CLI_Engine.md  Execution_Trace.md  Object_Introspection_Docstring_Parsing.md  on_boarding.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yaml  dependabot.yml
.scannerwork/: report-task.txt
api/: index.html
benefits/: index.html
css/: highlight.css  theme.css  theme_extra.css
doc/: benefits.md  guide.md  using-cli.md
docs/: MyProjectMgnt.docx  [Nhóm 14]__Báo cáo__QTDACNTT.docx  api.md  benefits.md  guide.md  index.md  installation.md  troubleshooting.md  using-cli.md  ~$hóm 14]__Báo cáo__QTDACNTT.docx  ~WRL0158.tmp
fire/: __init__.py  __main__.py  completion.py  completion_test.py  core.py  core_test.py  custom_descriptions.py  custom_descriptions_test.py  decorators.py  decorators_test.py  docstrings.py  docstrings_fuzz_test.py  docstrings_test.py  exceptions.py  fire_import_test.py  fire_test.py  formatting.py  formatting_test.py  formatting_windows.py  helptext.py  helptext_test.py  helputils.py  helputils_test.py  inspectutils.py  inspectutils_test.py  interact.py  interact_test.py  main_test.py  parser.py  parser_annotations.py  parser_fuzz_test.py  parser_test.py  test_components.py  test_components_bin.py  test_components_py3.py  test_components_py3p5.py  test_components_test.py  test_main.py  test_testutils.py  testutils.py  (+4 more)
fire_json/: completion_test.py  core_test.py  custom_descriptions_test.py  decorators.py  docstrings_test.py  formatting.py  inspectutils.py  interact.py  interact_test.py  parser_fuzz_test.py  parser_test.py  trace.py
guide/: index.html
installation/: index.html
js/: theme.js
mkdocs/: search_index.json
original-docs/: api.md  benefits.md  index.md  installation.md  using-cli.md
search/: search_index.json
tests/: __init__.py  completion_test.py  core_test.py  decorators_test.py  fire_import_test.py  fire_test.py  helputils_test.py  inspectutils_test.py  interact_test.py  parser_fuzz_test.py  parser_test.py  (+5 more)
(+44 files in other folders)
