[tool.poetry]
name = "python-fire"
version = "0.1.0"
description = ""
authors = ["ESPR3SS0 <98864173+ESPR3SS0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^2.4.0"
pytest = "^8.1.1"
six = "^1.16.0"
mock = "^5.1.0"
hypothesis = "^6.100.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
